<resources>
    <string name="app_name">PriceTag</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_products_index">ProductsIndexActivity</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_shops">Shops</string>
    <string name="title_lists">Shopping lists</string>
    <string name="title_index">Index</string>
    <string name="title_item_action">Item action</string>
    <string name="search_button_text">Search</string>
    <string name="search_edit_text_hint">Search by name</string>
    <string name="products_heading">Products</string>
    <string name="shops_heading">Shops</string>
    <string name="lists_heading">Shopping lists</string>
    <string name="write_name">Write name</string>
    <string name="write_address">Write address</string>
    <string name="name_text">Name:</string>
    <string name="address_text">Address:</string>
    <string name="login">Log in</string>
    <string name="loginFieldsError">Please fill all fields</string>
    <string name="signupFieldsError">Passwords needs to be the same. All fields are mandatory.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
