<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.pricetag.bottomBar.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productsForBasketFragment"
            app:destination="@id/productsForBasketFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.example.pricetag.bottomBar.products.ProductsFragment"
        android:label="@string/title_products">
        <action
            android:id="@+id/action_navigation_products_to_item_action_fragment"
            app:destination="@id/item_action_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_shops"
        android:name="com.example.pricetag.bottomBar.shops.ShopsFragment"
        android:label="@string/title_shops"
        tools:layout="@layout/fragment_shops" >
        <action
            android:id="@+id/action_navigation_shops_to_item_action_fragment"
            app:destination="@id/item_action_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_lists"
        android:name="com.example.pricetag.bottomBar.lists.ListsFragment"
        android:label="@string/title_lists"
        tools:layout="@layout/fragment_lists" >
        <action
            android:id="@+id/action_navigation_lists_to_item_action_fragment"
            app:destination="@id/item_action_fragment" />
    </fragment>

    <fragment
        android:id="@+id/item_action_fragment"
        android:name="com.example.pricetag.templates.action.ItemActionFragment"
        android:label="@string/title_item_action"
        tools:layout="@layout/fragment_item_action" >
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="type"
            app:argType="com.example.pricetag.utils.ItemType" />
        <action
            android:id="@+id/action_item_action_fragment_to_navigation_lists"
            app:destination="@id/navigation_lists" />
        <action
            android:id="@+id/action_item_action_fragment_to_navigation_shops"
            app:destination="@id/navigation_shops" />
        <action
            android:id="@+id/action_item_action_fragment_to_navigation_products"
            app:destination="@id/navigation_products" />
    </fragment>
    <fragment
        android:id="@+id/productsForBasketFragment"
        android:name="com.example.pricetag.templates.basket.ItemsForBasketFragment"
        android:label="fragment_products_for_basket"
        tools:layout="@layout/fragment_items_for_basket" >
        <action
            android:id="@+id/action_productsForBasketFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>