<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headingLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|left|center_vertical"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headingLinearLayout">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:text="@string/name_text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/write_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addressLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@+id/nameLinearLayout">

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:text="@string/address_text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="6"
            android:ems="10"
            android:hint="@string/write_address"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dropdownWithActionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="8"
        app:layout_constraintTop_toBottomOf="@+id/addressLinearLayout">

        <TextView
            android:id="@+id/itemToChooseTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="2"
            android:gravity="right|center_vertical"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/itemToChooseSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/actionTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="quantity"
            android:textSize="18dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="10dp"
            android:paddingHorizontal="0dp"
            android:paddingStart="0dp"
            android:tint="#FFFFFF"
            app:backgroundTint="#8A8585"
            app:elevation="10dp"
            app:fabCustomSize="35dp"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="318dp"
        android:layout_height="223dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropdownWithActionLinearLayout">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="#6F6D6D"
        android:text="Confirm "
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        tools:layout_editor_absoluteX="136dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:background="#7AA39898"
        android:text="Cancel"
        app:layout_constraintTop_toBottomOf="@+id/dropdownWithActionLinearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>